# proj0

./: .gitignore  CMakeLists.txt  build.sh  testfile.txt
src/: CMakeLists.txt  Main.cpp
test/: CMakeLists.txt  portableTests.cpp
